fix: Update colors for better contrast

--- a/sass/components/menu.scss
+++ b/sass/components/menu.scss
@@ -12,8 +12,8 @@
         flex: 1 1 100%;
         height: rem(50);
         line-height: rem(50);
-        background-color: var(--clr-light-gray-2);
-        color: var(--bs-gray-dark);
+        background-color: var(--clr-medium-gray-2);
+        color: var(--clr-dark-gray-100);
         text-transform: uppercase;
         text-decoration: none;
         margin: 0 0 rem(20) 0;
